--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/style.css">
     <script src="/lodash.min.js"></script>
     <title>Document</title>
   </head>
   <body>
+    <div class="cotainer">
+
+      <header>
+        <div>Mixed Messages</div>
+      </header>
+      <main>
+        <p class="sign"></p>
+        <p></p>
+        <p></p>
+        <p></p>
+      </main>
+      <footer>
+        <p class="pfooter">F.Oliveri</p>
+      </footer>
+    </div>
     <script src="/main.js"></script>
   </body>
 </html>
